# netsentinel

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  PROJECT_CONTEXT.md  PROJECT_STATE.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.codex/: BOOTSTRAP.md  SESSION_CHECKLIST.md
.codex/roles/: implementer.md  planner.md  reviewer.md  state_manager.md  strategist.md
app/: __init__.py  main.py
app/api/: health.py  metrics.py  nodes.py  probes.py  scheduler.py
app/core/: logging.py
app/domain/: models.py
app/services/: __init__.py  prober.py  scheduler.py
app/storage/: repository.py  sqlite_repository.py
docs/: AI_CONTEXT.md  architecture.md
docs/plans/: 2026-02-22-iteration-1-backend-foundation.md
tasks/: current_iteration.md
tests/: __init__.py  test_health.py  test_logging.py  test_metrics.py  test_models.py  test_monitoring_flow.py  test_prober.py  test_scheduler.py  test_sqlite_repository.py
